--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* --- RESET & VARIABLES --- */
 :root {
     --primary-blue: #1E3A8A;
-    --dark-blue: #0F172A;
+    --dark-blue: #1e3a8a;
     --light-blue-bg: #F8FAFC;
     --green-acc: #16A34A;
     --text-dark: #111827;
