--- a/css/styles.css
+++ b/css/styles.css
@@ -906,8 +906,8 @@ body {
 }
 
 .footer-logo-box {
-    width: 80px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     background: transparent;
     border-radius: 5px;
     display: inline-flex;
